# snapcut

./: .gitignore  pyproject.toml
snapcut/: audio.py  cli.py  fcpxml.py  models.py  premiere_xml.py  score.py  silence.py  sync.py  transcribe.py
